--- a/calc-ts.html
+++ b/calc-ts.html
@@ -58,7 +58,7 @@ Comment out Kirk's ga while developing
     <script src="icon.js"></script>
     <script src="debug.js"></script>
     <script src="settings.js"></script>
-    <script src="init.js"></script>
+    <script src="dist.js"></script>
 </head>
 
 <!--Copyright 2015-2019 Kirk McDonald
@@ -75,7 +75,7 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.-->
 
-<body onload="init()">
+<body>
     <table>
     <tr>
     <td id="targetparent">
